Restore original text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import heroImage from "../../public/images/vincenzo.jpg";
 	</Hero>
 
 	<section>
-		<span class="badge">Product designer and professor</span>
+		<span class="badge">Product designer</span>
 		<p class="paragraph">
 			I have 10+ years experience working as product designer in start-up, digital agency and big company.
 		</p>
