New about text, added work experience

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,12 +14,12 @@ import heroImage from "../../public/images/vincenzo.jpg";
 
     <section>
         <span class="badge">About me</span>
-        <p class="paragraph">I grew up in Agropoli, a small town in southern Italy. After high school, I moved to Milan to study <strong>Graphic Design and Art Direction at NABA</strong>, where I earned my bachelor’s degree.</p>
+        <p class="paragraph">I grew up in Agropoli, a small town in southern Italy. After high school, I moved to Milan where I earned my bachelor’s degree in <strong>Graphic Design and Art Direction at NABA</strong>.</p>
         <p class="paragraph">My first professional experience was in a 4 people startup, creating <strong>UIs for native iOS and Android apps</strong> using a custom made builder.</p>
         <p class="paragraph">Three years later I joined a digital agency, <strong>working directly with clients,</strong> learning how to juggle between tight deadlines and busy days.</p>
-        <p class="paragraph">I eventually moved into the product world, a place I initially thought wouldn’t suit me, but which turned out to be the perfect fit. I spent around <strong>seven years at automobile.it, part of the eBay Classifieds Group</strong>, working within the eBay family on a platform I helped evolve over time.</p>
+        <p class="paragraph">I eventually moved into the product world, a place I initially thought wouldn’t suit me, but which turned out to be the perfect fit. I spent around <strong>seven years in eBay Classifieds Group</strong>, working within the eBay family on automobile.it, a platform I helped design and evolve over time.</p>
         <p class="paragraph">Since October 2021, I’ve also taken on a side project as a <strong>professor at NABA</strong>, teaching Web Design and UX/UI Design in undergraduate programs, and Digital Design and Motion Design in postgraduate ones. It feels great to be back where my journey began, just on the other side of the desk.</p>
-        <p class="paragraph">On a more personal note, I love watching movies and TV series, hanging out with friends over a beer, discovering new memes, and solving the Rubik’s cube.</p>
+        <p class="paragraph">After my eBay chapter, I jumped into freelancing, currently collaborating with DXC Technology, working on projects for Italian ministries and public institutions, definitely among the most challenging and rewarding ones.</p>
     </section>
 
     <section>
